# ThinkFastGame

./: CMakeLists.txt  Makefile  README.md  ThinkFastServer_Setup.md  WAMP_SETUP.md  hosts-entry.txt  main.cpp  server_main.cpp  thinkfast-vhost.conf
backend/: auth.php  config.php  leaderboard.php  proxy.php  room.php
data/: users.csv
src/core/: AuthManager.cpp  AuthManager.h  GameEngine.cpp  GameEngine.h  GameTypes.cpp  GameTypes.h  RoomManager.cpp  RoomManager.h  WordValidator.cpp  WordValidator.h
src/gui/: index.html
src/gui/css/: style.css
src/gui/js/: game.js
src/server/: HttpServer.cpp  HttpServer.h
src/ui/: ConsoleUI.cpp  ConsoleUI.h  Screens.cpp  Screens.h
src/utils/: BotNames.cpp  BotNames.h  CSVManager.cpp  CSVManager.h
